Fixed some of the issues related to project and comment service